ci: add crossref as part of report generation

--- a/.github/workflows/generate_report.yml
+++ b/.github/workflows/generate_report.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           args: >-
             -o report.pdf
+            --filter pandoc-crossref
             --citeproc
             -N
             --metadata-file=metadata.yml
